[metadata]
name = chadtest-catdrout
version = 0.0.1
author = Catdrout
author_email = haxi@viw.se
description = A utillity to test your system chadness
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catdroutcode/chadtest
project_urls =
    Bug Tracker = https://github.com/catdroutcode/chadtest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache-2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
